--- a/service/service_oss/src/main/resources/application.yml
+++ b/service/service_oss/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
 aliyun:
   oos:
     file:
-      endpoint: https://oss-cn-guangzhou.aliyuncs.com
-      accessKeyId: LTAI5tPWaj6W1NdSg9TcE1de
-      accessKeySecret: 0zm4vzTHOyI8M6ccfZ21paoad52hAG
-      bucketName: blogpic2022
+      endpoint: 
+      accessKeyId: 
+      accessKeySecret: 
+      bucketName: 
