--- a/service/service_edu/pom.xml
+++ b/service/service_edu/pom.xml
@@ -11,7 +11,13 @@
 
     <artifactId>service_edu</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>3.1.1</version>
+        </dependency>
+    </dependencies>
 
 
     <properties>
